# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "underhood"
version = "2.0.0"
description = "A 'small' utility, which download tweets and uploads to Notion &, prototyped fastly for underhood.club"
authors = ["tiulpin <viktor@tiulp.in>"]
readme = "README.md"
license = "Apache Software License 2.0"
repository = "https://github.com/tiulpin/underhood.club"
homepage = "https://github.com/tiulpin/underhood.club"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tiulpin/underhood.club/issues"

[tool.poetry.scripts]
underhood = "underhood.__main__:launch"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
spacy = "^3.0.3"
scipy = "^1.6.1"
gensim = "^3.8.3"
nltk = "^3.5"
tenacity = "^7.0.0"
pretty-errors = "^1.2.20"
typer = "^0.3.2"
sentry-sdk = "^1.1.0"
tweepy = {git = "https://github.com/tweepy/tweepy.git", branch = "master"}
notion = {git = "https://github.com/tiulpin/notion-py"}

[tool.taskipy.tasks]
docker = "docker build -t ghcr.io/tiulpin/underhood:latest -f Dockerfile ."

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.10.0"
black = "^21.5b0"
mypy = "^0.800"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.7.2"
pydocstyle = "^6.0.0"
pre-commit = "^2.11.0"
lazydocs = "^0.4.6"
taskipy = "^1.7.0"

[tool.isort]
profile = "pycharm"
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
order_by_type = false
use_parentheses = true
lexicographical = false
include_trailing_comma = true
force_sort_within_sections = true
ensure_newline_before_comments = true
force_alphabetical_sort_within_sections = true

[tool.black]
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["underhood"]
omit = ["*__init__*"]

[tool.coverage.report]
fail_under = 70

[tool.flakehell]
application_import_names = ["underhood"]
exclude = [".git", "docs", "tests", ".ipynb*", "*.ipynb", ".pytest_cache", ".venv"]
max_line_length = 120
max_complexity = 10
show_source = true
import_order_style = "google"
strictness = "short"

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*", "-E203","-W503", "-E231"]
pylint = ["+*", "-E203", "-W503", "-E231"]
mccabe = ["+*"]
