# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "underhood"
version = "2.4.0"
description = "A 'small' utility, which download tweets and uploads to Notion, prototyped fastly for underhood.club"
authors = ["tiulpin <viktor@tiulp.in>"]
readme = "README.md"
license = "Apache Software License 2.0"
repository = "https://github.com/tiulpin/underhood.club"
homepage = "https://github.com/tiulpin/underhood.club"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tiulpin/underhood.club/issues"

[tool.poetry.scripts]
underhood = "underhood.__main__:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
notion = {git = "https://github.com/tiulpin/notion-py"}
tweepy = "^4.4.0"
python-telegram-bot = "^13.5"
sentry-sdk = "^1.1.0"
requests = "^2.26.0"
cython = "^0.29.26"
spacy = "^3.0.3"
scipy = "^1.7.3"
gensim = "^4.1.2"
nltk = "^3.5"
tenacity = "^8.0.1"
pretty-errors = "^1.2.20"
typer = "^0.4.0"
validators = "^0.18.2"
imgurpython = "^1.1.7"

[tool.taskipy.tasks]
docker = "docker build -t ghcr.io/tiulpin/underhood:latest -f Dockerfile ."
lint = "flakehell lint && isort --check-only . && black --check . && mypy --ignore-missing-imports underhood"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
black = "^21.5b0"
lazydocs = "^0.4.6"
taskipy = "^1.8.1"

[tool.black]
line_length = 120
