[tool.poetry]
name = "notionhood"
version = "0.1.0"
description = "A small utility, which uploads tweets to Notion, prototyped fastly for underhood.club"
authors = ["tiulpin <viktor@tiulp.in>"]

[tool.poetry.dependencies]
python = "^3.8"
notion = {git = "https://github.com/tiulpin/notion-py.git", branch = "master", develop = true}
requests = "^2.25.1"
imgurpython = "^1.1.7"
ujson = "^4.0.2"
spacy = "^3.0.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.scripts]
notionhood = "notionhood.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
