[tool.poetry]
name = "notionhood"
version = "0.1.0"
description = "A small utility, which uploads tweets to Notion, prototyped fastly for underhood.club"
authors = ["tiulpin <viktor@tiulp.in>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
imgurpython = "^1.1.7"
spacy = "^3.0.4"
notion = {git = "https://github.com/tiulpin/notion-py"}
orjson = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
python-dotenv = "^0.15.0"
mypy = "^0.812"

[tool.poetry.scripts]
notionhood = "notionhood.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
