[tool.poetry]
name = "topichood"
version = "0.1.0"
description = "A small utility, which does topic modelling on tweets, prototyped fastly for underhood.club"
authors = ["tiulpin <viktor@tiulp.in>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.1"
gensim = "^3.8.3"
nltk = "^3.5"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b0"

[tool.poetry.scripts]
topichood = "topichood.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
